feat: Introduce comprehensive finance and transaction management
- Added `CashTransaction` entity, repository, and service for handling financial transactions.
- Implemented event classes for different transaction types including capital, bank, savings, repayment, and expenses.
- Introduced fee bucket management via `FeeBucket` entity, repository, and service.
- Enhanced `PaymentsService` with improved allocation logic for handling payments and publishing repayment events.
- Added `ReportService` for generating daily reports, loan statements, and aging analysis in PDF format.
- Updated `LoansController` to integrate fee calculations, improve scheduling, and enforce user role restrictions on loan deletion.
- Enhanced `SettingsController` with financial state tracking and saving functionality.
- Introduced `UserSession` utility for managing user roles and session state.